# DeFi-Trading-Agent-Infrastructure

./: .env.example  ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  README.md
configs/: rpc.toml  trading.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  errors.rs  lib.rs  messages.rs  types.rs
crates/execution-agent/: Cargo.toml
crates/execution-agent/src/: agent.rs  broadcast.rs  gas.rs  lib.rs  nonce.rs  signer.rs  tx_builder.rs
crates/market-data-agent/: Cargo.toml
crates/market-data-agent/benches/: parser_bench.rs
crates/market-data-agent/src/: agent.rs  lib.rs  parser.rs  price_tracker.rs  rpc.rs
crates/messaging/: Cargo.toml
crates/messaging/benches/: bus_throughput.rs
crates/messaging/src/: bus.rs  circuit_breaker.rs  lib.rs  retry.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: main.rs
crates/orchestrator/tests/: e2e.rs
crates/risk-agent/: Cargo.toml
crates/risk-agent/src/: agent.rs  lib.rs  rules.rs  state.rs
crates/strategy-agent/: Cargo.toml
crates/strategy-agent/src/: agent.rs  lib.rs  strategy.rs
crates/strategy-agent/src/strategies/: arbitrage.rs  mod.rs
scripts/: benchmark.sh  run_local.sh
