[workspace]
members = [
    "crates/common",
    "crates/messaging",
    "crates/market-data-agent",
    "crates/strategy-agent",
    "crates/risk-agent",
    "crates/execution-agent",
    "crates/orchestrator",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
alloy = { version = "0.15", features = ["providers", "signers", "transport-ws", "consensus", "network"] }
criterion = { version = "0.5", features = ["async_tokio"] }

# Internal crates
common = { path = "crates/common" }
messaging = { path = "crates/messaging" }
market-data-agent = { path = "crates/market-data-agent" }
strategy-agent = { path = "crates/strategy-agent" }
risk-agent = { path = "crates/risk-agent" }
execution-agent = { path = "crates/execution-agent" }
