[package]
name = "execution-agent"
version.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true
messaging.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
