[package]
name = "messaging"
version.workspace = true
edition.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bus_throughput"
harness = false

[dependencies]
common.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
